--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -55,9 +55,9 @@
          -->
           <li class="nav-header">Settings</li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon far fa-circle  text-danger"></i>
-              <p class="text">Cat Categoria</p>
+            <a href="/categoria" class="nav-link">
+              <i class="nav-icon fas fa-cogs  "></i>
+              <p class="text">Categoria</p>
             </a>
           </li>
           
