--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
                with font-awesome or any other icon font library -->
           
           <li class="nav-item">
-            <a href="/dashboard" class="nav-link">
+            <a routerLink="/dashboard" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -55,7 +55,7 @@
          -->
           <li class="nav-header">Settings</li>
           <li class="nav-item">
-            <a href="/categoria" class="nav-link">
+            <a routerLink="/categoria" class="nav-link">
               <i class="nav-icon fas fa-cogs  "></i>
               <p class="text">Categoria</p>
             </a>
