--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
             <a routerLink="/dashboard" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Dashboard
+               Tablero
                
               </p>
             </a>
@@ -53,11 +53,11 @@
             </a>
           </li>
          -->
-          <li class="nav-header">Settings</li>
+          <li class="nav-header">Catalogos</li>
           <li class="nav-item">
             <a routerLink="/categoria" class="nav-link">
               <i class="nav-icon fas fa-cogs  "></i>
-              <p class="text">Categoria</p>
+              <p class="text">Categorias</p>
             </a>
           </li>
           
